--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding: 15px 0 0 0;
 }
 
 #first-row,
@@ -52,4 +52,8 @@ body {
   border-radius: 3px;
   margin: 2px;
   padding: 3px;
+}
+
+#reset-btn {
+  margin: 15px 0 0 0;
 }
