update font family

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 #message {
