add basic physical keyboard functionality

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,19 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* animation: flip */
+}
+
+@keyframes flip {
+  0% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
 }
 
 #keyboard-container {
