--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h1 {
   padding: 15px 0 0 0 ;
 }
 
-#board-square {
+.board-square {
   border: 2px solid rgb(211, 214, 218);
   width: 62px;
   height: 62px;
@@ -50,6 +50,10 @@ h1 {
   100% {
     transform: scaleY(1);
   }
+}
+
+.animate {
+  animation: flip 0.5s ease;
 }
 
 #keyboard-container {
