--- a/css/style.css
+++ b/css/style.css
@@ -101,16 +101,22 @@ button {
   background-color: rgb(95, 160, 89);
   color: white;
   border: none;
+  width: 64px;
+  height: 64px
 }
 
 .yellow {
   background-color: rgb(194, 171, 78);
   color: white;
   border: none;
+  width: 64px;
+  height: 64px
 }
 
 .gray {
   background-color: rgb(109, 113, 115);
   color: white;
   border: none;
+  width: 64px;
+  height: 64px
 }
