--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ h1 {
 #message {
   margin-top: 15px;
   border: 1px solid black;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  padding: 10px;
 }
 
 #board-container {
@@ -73,6 +77,7 @@ h1 {
 button {
   border: none;
   background-color: rgb(212, 214, 218);
+  color: black;
   border-radius: 4px;
   margin-right: 6px;
   padding: 3px;
