add a setTimeout function to the isWinner function

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ button {
 #reset-btn {
   margin: 15px 0 0 0;
   width: auto;
-  padding: 0 15px;
+  height: auto;
+  padding: 10px;
 }
 
 .green {
