--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ button {
   border-radius: 4px;
   margin-right: 6px;
   padding: 3px;
-  width: 43px;
+  width: 33px;
   height: 58px;
   font-size: 13.3333px;
   font-weight: 700;
@@ -89,7 +89,7 @@ button {
 
 #enter, 
 #back {
-  width: 65px;
+  width: 50px;
 }
 
 #reset-btn {
@@ -115,4 +115,16 @@ button {
   background-color: rgb(109, 113, 115);
   color: white;
   border-color: white;
+}
+
+
+@media only screen and (min-width: 768px) {
+  button {
+    width: 43px;
+  }
+
+  #enter, 
+  #back {
+  width: 65px;
+  }
 }
