--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ body {
 
 h1 {
   font-family: 'Roboto Slab', serif;
+  display: flex;
+  align-items: flex-start;
+}
+
+hr {
+  width: 100%;
+  height:2px;
+  border-width:0;
+  color: rgb(211, 214, 218);
+  background-color:rgb(211, 214, 218);
 }
 
 #message {
@@ -62,6 +72,7 @@ h1 {
   justify-content: center;
   align-items: center;
   padding: 15px 0 0 0;
+  flex-grow: 1;
 }
 
 #first-row,
@@ -78,7 +89,7 @@ button {
   border-radius: 4px;
   margin-right: 6px;
   padding: 3px;
-  width: 33px;
+  width: 31px;
   height: 58px;
   font-size: 13.3333px;
   font-weight: 700;
