--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,23 @@ body {
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
+header {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Roboto Slab', serif;
+  font-size: 25px;
+}
+
 h1 {
   font-family: 'Roboto Slab', serif;
-  display: flex;
-  align-items: flex-start;
+  font-size: 25px;
 }
 
 hr {
   width: 100%;
-  height:2px;
+  height: 1px;
   border-width:0;
   color: rgb(211, 214, 218);
   background-color:rgb(211, 214, 218);
@@ -32,6 +40,13 @@ hr {
   color: white;
   border-radius: 4px;
   padding: 10px;
+}
+
+#board {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
 }
 
 #board-container {
@@ -69,10 +84,10 @@ hr {
 #keyboard-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   padding: 15px 0 0 0;
-  flex-grow: 1;
+
 }
 
 #first-row,
@@ -129,7 +144,15 @@ button {
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 500px) {
+  header {
+    height: 65px;
+  }
+
+  h1 {
+    font-size: 35px;
+  }
+  
   button {
     width: 43px;
   }
