--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ hr {
   }
 }
 
-
 #keyboard-container {
   display: flex;
   flex-direction: column;
@@ -119,7 +118,7 @@ button {
 }
 
 #reset-btn {
-  margin: 15px 0 0 0;
+  margin: 15px 0 200px 0;
   width: auto;
   height: auto;
   padding: 10px;
