--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,11 @@ body {
 }
 
 header {
+  width: 100%;
   height: 40px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   font-family: 'Roboto Slab', serif;
   font-size: 25px;
 }
@@ -23,13 +24,116 @@ header {
 h1 {
   font-family: 'Roboto Slab', serif;
   font-size: 25px;
+  align-self: center;
+  margin-left: 20px;
+  /* margin: auto; */
+}
+
+#stats-button {
+  width: auto;
+  height: auto;
+  padding: 5px;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 20px;;
+}
+
+#stats-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 90%;
+  top: 15%;
+  height: auto;
+  color: black;
+  background-color:white;
+  border-radius: 10px;;
+  box-shadow: 0 0 20px 4px rgb(109, 113, 115);
+  padding: 15px 0 30px 0;
+}
+
+#modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#close-btn {
+  align-self: flex-end;
+  margin-right: 10px;
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 14px;
+  padding-bottom: 10px;
+}
+
+#stats {
+  width: 85%;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50px 35px;
+  grid-template-areas:
+  'played-num percent-num current-num max-num'
+  'played percent current max';
+  text-align: center;
+}
+
+.stat-nums {
+  font-size: 35px;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stat-titles {
+  font-size: 12px;
+  line-height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  letter-spacing: 0.1em;
+}
+
+#played-num {
+  grid-area: played-num;
+}
+
+#percent-num {
+  grid-area: percent-num;
+}
+
+#current-num {
+  grid-area: current-max;
+}
+
+#max-num {
+  grid-area: max-num;
+}
+
+#played {
+  grid-area: played;
+}
+
+#percent {
+  grid-area: percent
+}
+
+#current-streak {
+  grid-area: current
+}
+
+#max-streak {
+  grid-area: max;
 }
 
 hr {
   width: 100%;
   height: 1px;
   border-width:0;
-  color: rgb(211, 214, 218);
   background-color:rgb(211, 214, 218);
 }
 
