--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
   width: 100%;
   height: 40px;
   display: flex;
+  align-items: center;
   font-family: 'Roboto Slab', serif;
   font-size: 25px;
 }
@@ -22,16 +23,13 @@ header {
 h1 {
   font-family: 'Roboto Slab', serif;
   font-size: 25px;
-  align-self: center;
   margin-left: 20px;
-  /* margin: auto; */
 }
 
 #stats-button {
   width: auto;
   height: auto;
   padding: 5px;
-  align-self: center;
   margin-left: auto;
   margin-right: 20px;;
 }
