--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,12 @@ button {
   border-color: white;
 }
 
+.temp-color {
+  background-color: white;
+  color: black;
+  border-color: rgb(211, 214, 218)
+}
+
 
 @media only screen and (min-width: 500px) {
   header {
